base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinic-deploy
  labels:
    myversion: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clinic-front
  template:
    metadata:
      labels:
        app: clinic-front
    spec: # specification du pod
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: springboot
          image: ghcr.io/gminh474/spring-petclinic:latest
          startupProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            timeoutSeconds: 2
            periodSeconds: 3
            initialDelaySeconds: 2
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            timeoutSeconds: 1
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            timeoutSeconds: 1
            periodSeconds: 3
